--- a/portfolio.html
+++ b/portfolio.html
@@ -38,63 +38,65 @@
     </header>
 
     <main>
-      <section container>
+      <section class="container">
         <h1 class="visually-hidden">Портфолио</h1>
-        <ul class="container filter-button-list">
-          <li><button type="button" class="filter-button filter">Все</button></li>
-          <li><button type="button" class="filter-button filter">Веб-сайты</button></li>
-          <li><button type="button" class="filter-button filter">Приложения</button></li>
-          <li><button type="button" class="filter-button filter">Дизайн</button></li>
-          <li><button type="button" class="filter-button filter">Маркетинг</button></li>
-        </ul>
+        <div class="filter-list">
+          <ul class="filter-button-list">
+            <li><button type="button" class="filter-button filter">Все</button></li>
+            <li><button type="button" class="filter-button filter">Веб-сайты</button></li>
+            <li><button type="button" class="filter-button filter">Приложения</button></li>
+            <li><button type="button" class="filter-button filter">Дизайн</button></li>
+            <li><button type="button" class="filter-button filter">Маркетинг</button></li>
+          </ul>
 
-        <ul class="container filter-cards">
-          <li>
-            <img src="./images/people.jpg" alt="Люди" width="370" />
-            <h2 class="card-title">Технокряк</h2>
-            <p class="card-filter">Веб-сайт</p>
-          </li>
-          <li>
-            <img src="./images/sport.jpg" alt="Спортсмены" width="370" />
-            <h2 class="card-title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-            <p class="card-filter">Дизайн</p>
-          </li>
-          <li>
-            <img src="./images/seafood.jpg" alt="Морская еда" width="370" />
-            <h2 class="card-title">Ресторан <span lang="en">Seafood</span></h2>
-            <p class="card-filter">Приложение</p>
-          </li>
-          <li>
-            <img src="./images/nausnik.jpg" alt="Наушники" width="370" />
-            <h2 class="card-title">Проект <span lang="en">Prime</span></h2>
-            <p class="card-filter">Маркетинг</p>
-          </li>
-          <li>
-            <img src="./images/boxes.jpg" alt="Подарочная упаковка" width="370" />
-            <h2 class="card-title">Проект <span lang="en">Boxes</span></h2>
-            <p class="card-filter">Приложение</p>
-          </li>
-          <li>
-            <img src="./images/display.jpg" alt="Монитор" width="370" />
-            <h2 class="card-title"><span lang="en">Inspiration has no Borders</span></h2>
-            <p class="card-filter">Веб-сайт</p>
-          </li>
-          <li>
-            <img src="./images/book.jpg" alt="Книга" width="370" />
-            <h2 class="card-title">Издание <span lang="en"></span> Limited Edition</h2>
-            <p class="card-filter">Дизайн</p>
-          </li>
-          <li>
-            <img src="./images/sheet.jpg" alt="Этикетка" width="370" />
-            <h2 class="card-title">Проект <span lang="en">LAB</span></h2>
-            <p class="card-filter">Маркетинг</p>
-          </li>
-          <li>
-            <img src="./images/notebook.jpg" alt="Ноутбук" width="370" />
-            <h2 class="card-title"><span lang="en">Growing Business</span></h2>
-            <p class="card-filter">Приложение</p>
-          </li>
-        </ul>
+          <ul class="container filter-cards">
+            <li>
+              <img src="./images/people.jpg" alt="Люди" width="370" />
+              <h2 class="card-title">Технокряк</h2>
+              <p class="card-filter">Веб-сайт</p>
+            </li>
+            <li>
+              <img src="./images/sport.jpg" alt="Спортсмены" width="370" />
+              <h2 class="card-title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+              <p class="card-filter">Дизайн</p>
+            </li>
+            <li>
+              <img src="./images/seafood.jpg" alt="Морская еда" width="370" />
+              <h2 class="card-title">Ресторан <span lang="en">Seafood</span></h2>
+              <p class="card-filter">Приложение</p>
+            </li>
+            <li>
+              <img src="./images/nausnik.jpg" alt="Наушники" width="370" />
+              <h2 class="card-title">Проект <span lang="en">Prime</span></h2>
+              <p class="card-filter">Маркетинг</p>
+            </li>
+            <li>
+              <img src="./images/boxes.jpg" alt="Подарочная упаковка" width="370" />
+              <h2 class="card-title">Проект <span lang="en">Boxes</span></h2>
+              <p class="card-filter">Приложение</p>
+            </li>
+            <li>
+              <img src="./images/display.jpg" alt="Монитор" width="370" />
+              <h2 class="card-title"><span lang="en">Inspiration has no Borders</span></h2>
+              <p class="card-filter">Веб-сайт</p>
+            </li>
+            <li>
+              <img src="./images/book.jpg" alt="Книга" width="370" />
+              <h2 class="card-title">Издание <span lang="en"></span> Limited Edition</h2>
+              <p class="card-filter">Дизайн</p>
+            </li>
+            <li>
+              <img src="./images/sheet.jpg" alt="Этикетка" width="370" />
+              <h2 class="card-title">Проект <span lang="en">LAB</span></h2>
+              <p class="card-filter">Маркетинг</p>
+            </li>
+            <li>
+              <img src="./images/notebook.jpg" alt="Ноутбук" width="370" />
+              <h2 class="card-title"><span lang="en">Growing Business</span></h2>
+              <p class="card-filter">Приложение</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
