--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </header>
 
     <main>
-      <section class="hero-section">
+      <section class="hero-section container">
         <h1 class="hero-text">Эфективные решения <br />для вашего бизнеса</h1>
         <button type="button" class="hero-button">Заказать услугу</button>
       </section>
