--- a/portfolio.html
+++ b/portfolio.html
@@ -16,92 +16,96 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="container botton-line">
-      <a href="#" class="logo">Web<span class="logo-header">Studio</span></a>
+    <header class="botton-line">
+      <div class="container">
+        <a href="#" class="logo">Web<span class="logo-header">Studio</span></a>
 
-      <nav class="site-nav">
-        <ul class="nav-container">
-          <li><a href="./index.html" class="link auth-link">Студия</a></li>
-          <li><a href="./portfolio.html" class="link auth-link current">Портфолио</a></li>
-          <li><a href="#" class="link auth-link">Контакты</a></li>
+        <nav class="site-nav">
+          <ul class="nav-container">
+            <li><a href="./index.html" class="link auth-link current">Студия</a></li>
+            <li><a href="./portfolio.html" class="link auth-link">Портфолио</a></li>
+            <li><a href="#" class="link auth-link">Контакты</a></li>
+          </ul>
+        </nav>
+
+        <ul class="auth-header">
+          <li>
+            <a href="mailto:infodevstudio.com" class="auth-link link">infodevstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+380961111111" class="auth-link link">+38 096 111 11 11</a>
+          </li>
         </ul>
-      </nav>
-
-      <ul class="auth-header">
-        <li>
-          <a href="mailto:infodevstudio.com" class="auth-link link">infodevstudio.com</a>
-        </li>
-        <li>
-          <a href="tel:+380961111111" class="auth-link link">+38 096 111 11 11</a>
-        </li>
-      </ul>
+      </div>
     </header>
 
     <main>
-      <section class="container">
-        <h1 class="visually-hidden">Портфолио</h1>
-        <div class="filter-list">
-          <ul class="filter-button-list">
-            <li><button type="button" class="filter-button filter">Все</button></li>
-            <li><button type="button" class="filter-button filter">Веб-сайты</button></li>
-            <li><button type="button" class="filter-button filter">Приложения</button></li>
-            <li><button type="button" class="filter-button filter">Дизайн</button></li>
-            <li><button type="button" class="filter-button filter">Маркетинг</button></li>
-          </ul>
+      <section>
+        <div class="container">
+          <h1 class="visually-hidden">Портфолио</h1>
+          <div class="filter-list">
+            <ul class="filter-button-list">
+              <li><button type="button" class="filter-button filter">Все</button></li>
+              <li><button type="button" class="filter-button filter">Веб-сайты</button></li>
+              <li><button type="button" class="filter-button filter">Приложения</button></li>
+              <li><button type="button" class="filter-button filter">Дизайн</button></li>
+              <li><button type="button" class="filter-button filter">Маркетинг</button></li>
+            </ul>
 
-          <ul class="container filter-cards">
-            <li>
-              <img src="./images/people.jpg" alt="Люди" width="370" />
-              <h2 class="card-title">Технокряк</h2>
-              <p class="card-filter">Веб-сайт</p>
-            </li>
-            <li>
-              <img src="./images/sport.jpg" alt="Спортсмены" width="370" />
-              <h2 class="card-title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-              <p class="card-filter">Дизайн</p>
-            </li>
-            <li>
-              <img src="./images/seafood.jpg" alt="Морская еда" width="370" />
-              <h2 class="card-title">Ресторан <span lang="en">Seafood</span></h2>
-              <p class="card-filter">Приложение</p>
-            </li>
-            <li>
-              <img src="./images/nausnik.jpg" alt="Наушники" width="370" />
-              <h2 class="card-title">Проект <span lang="en">Prime</span></h2>
-              <p class="card-filter">Маркетинг</p>
-            </li>
-            <li>
-              <img src="./images/boxes.jpg" alt="Подарочная упаковка" width="370" />
-              <h2 class="card-title">Проект <span lang="en">Boxes</span></h2>
-              <p class="card-filter">Приложение</p>
-            </li>
-            <li>
-              <img src="./images/display.jpg" alt="Монитор" width="370" />
-              <h2 class="card-title"><span lang="en">Inspiration has no Borders</span></h2>
-              <p class="card-filter">Веб-сайт</p>
-            </li>
-            <li>
-              <img src="./images/book.jpg" alt="Книга" width="370" />
-              <h2 class="card-title">Издание <span lang="en"></span> Limited Edition</h2>
-              <p class="card-filter">Дизайн</p>
-            </li>
-            <li>
-              <img src="./images/sheet.jpg" alt="Этикетка" width="370" />
-              <h2 class="card-title">Проект <span lang="en">LAB</span></h2>
-              <p class="card-filter">Маркетинг</p>
-            </li>
-            <li>
-              <img src="./images/notebook.jpg" alt="Ноутбук" width="370" />
-              <h2 class="card-title"><span lang="en">Growing Business</span></h2>
-              <p class="card-filter">Приложение</p>
-            </li>
-          </ul>
+            <ul class="container filter-cards">
+              <li>
+                <img src="./images/people.jpg" alt="Люди" width="370" />
+                <h2 class="card-title">Технокряк</h2>
+                <p class="card-filter">Веб-сайт</p>
+              </li>
+              <li>
+                <img src="./images/sport.jpg" alt="Спортсмены" width="370" />
+                <h2 class="card-title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+                <p class="card-filter">Дизайн</p>
+              </li>
+              <li>
+                <img src="./images/seafood.jpg" alt="Морская еда" width="370" />
+                <h2 class="card-title">Ресторан <span lang="en">Seafood</span></h2>
+                <p class="card-filter">Приложение</p>
+              </li>
+              <li>
+                <img src="./images/nausnik.jpg" alt="Наушники" width="370" />
+                <h2 class="card-title">Проект <span lang="en">Prime</span></h2>
+                <p class="card-filter">Маркетинг</p>
+              </li>
+              <li>
+                <img src="./images/boxes.jpg" alt="Подарочная упаковка" width="370" />
+                <h2 class="card-title">Проект <span lang="en">Boxes</span></h2>
+                <p class="card-filter">Приложение</p>
+              </li>
+              <li>
+                <img src="./images/display.jpg" alt="Монитор" width="370" />
+                <h2 class="card-title"><span lang="en">Inspiration has no Borders</span></h2>
+                <p class="card-filter">Веб-сайт</p>
+              </li>
+              <li>
+                <img src="./images/book.jpg" alt="Книга" width="370" />
+                <h2 class="card-title">Издание <span lang="en"></span> Limited Edition</h2>
+                <p class="card-filter">Дизайн</p>
+              </li>
+              <li>
+                <img src="./images/sheet.jpg" alt="Этикетка" width="370" />
+                <h2 class="card-title">Проект <span lang="en">LAB</span></h2>
+                <p class="card-filter">Маркетинг</p>
+              </li>
+              <li>
+                <img src="./images/notebook.jpg" alt="Ноутбук" width="370" />
+                <h2 class="card-title"><span lang="en">Growing Business</span></h2>
+                <p class="card-filter">Приложение</p>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
     </main>
 
-    <footer class="background-footer container">
-      <div class="footer-column">
+    <footer>
+      <div class="container footer-column background-footer">
         <a href="#" class="logo logofuter-padding">Web<span class="logo-footer">Studio</span></a>
         <address class="adress">г. Киев, пр-т Леси Украинки, 26</address>
         <ul class="adress-padding">
