--- a/index.html
+++ b/index.html
@@ -16,107 +16,118 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="container botton-line">
-      <a href="#" class="logo">Web<span class="logo-header">Studio</span></a>
+    <header class="botton-line">
+      <div class="container">
+        <a href="#" class="logo">Web<span class="logo-header">Studio</span></a>
 
-      <nav class="site-nav">
-        <ul class="nav-container">
-          <li><a href="./index.html" class="link auth-link current">Студия</a></li>
-          <li><a href="./portfolio.html" class="link auth-link">Портфолио</a></li>
-          <li><a href="#" class="link auth-link">Контакты</a></li>
+        <nav class="site-nav">
+          <ul class="nav-container">
+            <li><a href="./index.html" class="link auth-link current">Студия</a></li>
+            <li><a href="./portfolio.html" class="link auth-link">Портфолио</a></li>
+            <li><a href="#" class="link auth-link">Контакты</a></li>
+          </ul>
+        </nav>
+
+        <ul class="auth-header">
+          <li>
+            <a href="mailto:infodevstudio.com" class="auth-link link">infodevstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+380961111111" class="auth-link link">+38 096 111 11 11</a>
+          </li>
         </ul>
-      </nav>
-
-      <ul class="auth-header">
-        <li>
-          <a href="mailto:infodevstudio.com" class="auth-link link">infodevstudio.com</a>
-        </li>
-        <li>
-          <a href="tel:+380961111111" class="auth-link link">+38 096 111 11 11</a>
-        </li>
-      </ul>
+      </div>
     </header>
 
     <main>
-      <section class="hero-section container">
-        <h1 class="hero-text">Эфективные решения <br />для вашего бизнеса</h1>
-        <button type="button" class="hero-button">Заказать услугу</button>
+      <!-- HERO -->
+      <section>
+        <div class="container hero-section">
+          <h1 class="hero-text">Эфективные решения <br />для вашего бизнеса</h1>
+          <button type="button" class="hero-button">Заказать услугу</button>
+        </div>
       </section>
 
       <!-- Превосходства -->
-      <section class="container">
-        <ul class="advanteges-list section">
-          <li class="advanteges-width">
-            <h2 class="advanteges-h2">Внимание к деталям</h2>
-            <p class="advanteges-p">
-              Идейные соображения, а также начало повседневной работы по формированию позиции.
-            </p>
-          </li>
-          <li class="advanteges-width">
-            <h2 class="advanteges-h2">Пунктуальность</h2>
-            <p class="advanteges-p">
-              Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-            </p>
-          </li>
-          <li class="advanteges-width">
-            <h2 class="advanteges-h2">Планирование</h2>
-            <p class="advanteges-p">
-              Равным образом консультация с широким активом в значительной степени обуславливает.
-            </p>
-          </li>
-          <li class="advanteges-width">
-            <h2 class="advanteges-h2">Современные технологии</h2>
-            <p class="advanteges-p">
-              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
-            </p>
-          </li>
-        </ul>
+      <section>
+        <div class="container">
+          <ul class="advanteges-list section">
+            <li class="advanteges-width">
+              <h2 class="advanteges-h2">Внимание к деталям</h2>
+              <p class="advanteges-p">
+                Идейные соображения, а также начало повседневной работы по формированию позиции.
+              </p>
+            </li>
+            <li class="advanteges-width">
+              <h2 class="advanteges-h2">Пунктуальность</h2>
+              <p class="advanteges-p">
+                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+              </p>
+            </li>
+            <li class="advanteges-width">
+              <h2 class="advanteges-h2">Планирование</h2>
+              <p class="advanteges-p">
+                Равным образом консультация с широким активом в значительной степени обуславливает.
+              </p>
+            </li>
+            <li class="advanteges-width">
+              <h2 class="advanteges-h2">Современные технологии</h2>
+              <p class="advanteges-p">
+                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Чем занимаемся -->
-      <section class="container info-column section">
-        <h2 class="info-heading">Чем мы занимаемся</h2>
-        <ul class="info-link">
-          <li><img src="images/box1.jpg" alt="Дизайн" width="370" /></li>
-          <li><img src="images/box2.jpg" alt="Мобильные приложения" width="370" /></li>
-          <li><img src="images/box3.jpg" alt="Создание сайта" width="370" /></li>
-        </ul>
+      <section>
+        <div class="container info-column section">
+          <h2 class="info-heading">Чем мы занимаемся</h2>
+          <ul class="info-link">
+            <li><img src="images/box1.jpg" alt="Дизайн" width="370" /></li>
+            <li><img src="images/box2.jpg" alt="Мобильные приложения" width="370" /></li>
+            <li><img src="images/box3.jpg" alt="Создание сайта" width="370" /></li>
+          </ul>
+        </div>
       </section>
 
       <!-- Команда сотрудников -->
       <div class="bcg">
-        <section class="container team-column">
-          <h2 class="info-heading">Наша команда</h2>
-          <ul class="our-team team-list">
-            <li>
-              <img src="images/img4.jpg" alt="Дизайнер" width="270" />
-              <h3 class="our-team-h3">Игорь Демьяненко</h3>
-              <p class="our-team-p">Product Designer</p>
-              <p></p>
-            </li>
+        <section>
+          <div class="container team-column">
+            <h2 class="info-heading">Наша команда</h2>
+            <ul class="our-team team-list">
+              <li>
+                <img src="images/img4.jpg" alt="Дизайнер" width="270" />
+                <h3 class="our-team-h3">Игорь Демьяненко</h3>
+                <p class="our-team-p">Product Designer</p>
+                <p></p>
+              </li>
 
-            <li>
-              <img src="images/img5.jpg" alt="Програмист" width="270" />
-              <h3 class="our-team-h3">Ольга Репина</h3>
-              <p class="our-team-p">Frontend Drveloper</p>
-            </li>
-            <li>
-              <img src="images/img6.jpg" alt="Маркетолог" width="270" />
-              <h3 class="our-team-h3">Николай Тарасов</h3>
-              <p class="our-team-p">Marketing</p>
-            </li>
-            <li>
-              <img src="images/img7.jpg" alt="Дизайнер интерфейса" width="270" />
-              <h3 class="our-team-h3">Михаил Ермаков</h3>
-              <p class="our-team-p">UI Designer</p>
-            </li>
-          </ul>
+              <li>
+                <img src="images/img5.jpg" alt="Програмист" width="270" />
+                <h3 class="our-team-h3">Ольга Репина</h3>
+                <p class="our-team-p">Frontend Drveloper</p>
+              </li>
+              <li>
+                <img src="images/img6.jpg" alt="Маркетолог" width="270" />
+                <h3 class="our-team-h3">Николай Тарасов</h3>
+                <p class="our-team-p">Marketing</p>
+              </li>
+              <li>
+                <img src="images/img7.jpg" alt="Дизайнер интерфейса" width="270" />
+                <h3 class="our-team-h3">Михаил Ермаков</h3>
+                <p class="our-team-p">UI Designer</p>
+              </li>
+            </ul>
+          </div>
         </section>
       </div>
     </main>
 
-    <footer class="background-footer container">
-      <div class="footer-column">
+    <footer>
+      <div class="container footer-column background-footer">
         <a href="#" class="logo logofuter-padding">Web<span class="logo-footer">Studio</span></a>
         <address class="adress">г. Киев, пр-т Леси Украинки, 26</address>
         <ul class="adress-padding">
