--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="botton-line">
-      <div class="container">
+    <header class="header">
+      <div class="container heder-container">
         <a href="#" class="logo">Web<span class="logo-header">Studio</span></a>
 
         <nav class="site-nav">
           <ul class="nav-container">
-            <li><a href="./index.html" class="link auth-link current">Студия</a></li>
-            <li><a href="./portfolio.html" class="link auth-link">Портфолио</a></li>
-            <li><a href="#" class="link auth-link">Контакты</a></li>
+            <li><a href="./index.html" class="link nav-link current">Студия</a></li>
+            <li><a href="./portfolio.html" class="link nav-link">Портфолио</a></li>
+            <li><a href="#" class="link nav-link">Контакты</a></li>
           </ul>
         </nav>
 
@@ -41,17 +41,17 @@
 
     <main>
       <!-- HERO -->
-      <section>
-        <div class="container hero-section">
+      <section class="hero-section">
+        <div class="container">
           <h1 class="hero-text">Эфективные решения <br />для вашего бизнеса</h1>
           <button type="button" class="hero-button">Заказать услугу</button>
         </div>
       </section>
 
       <!-- Превосходства -->
-      <section>
+      <section class="section">
         <div class="container">
-          <ul class="advanteges-list section">
+          <ul class="advanteges-list">
             <li class="advanteges-width">
               <h2 class="advanteges-h2">Внимание к деталям</h2>
               <p class="advanteges-p">
@@ -81,8 +81,8 @@
       </section>
 
       <!-- Чем занимаемся -->
-      <section>
-        <div class="container info-column section">
+      <section class="section work">
+        <div class="container">
           <h2 class="info-heading">Чем мы занимаемся</h2>
           <ul class="info-link">
             <li><img src="images/box1.jpg" alt="Дизайн" width="370" /></li>
@@ -93,45 +93,43 @@
       </section>
 
       <!-- Команда сотрудников -->
-      <div class="bcg">
-        <section>
-          <div class="container team-column">
-            <h2 class="info-heading">Наша команда</h2>
-            <ul class="our-team team-list">
-              <li>
-                <img src="images/img4.jpg" alt="Дизайнер" width="270" />
-                <h3 class="our-team-h3">Игорь Демьяненко</h3>
-                <p class="our-team-p">Product Designer</p>
-                <p></p>
-              </li>
+      <section class="section bcg">
+        <div class="container">
+          <h2 class="info-heading">Наша команда</h2>
+          <ul class="our-team team-list">
+            <li>
+              <img src="images/img4.jpg" alt="Дизайнер" width="270" />
+              <h3 class="our-team-h3">Игорь Демьяненко</h3>
+              <p class="our-team-p">Product Designer</p>
+              <p></p>
+            </li>
 
-              <li>
-                <img src="images/img5.jpg" alt="Програмист" width="270" />
-                <h3 class="our-team-h3">Ольга Репина</h3>
-                <p class="our-team-p">Frontend Drveloper</p>
-              </li>
-              <li>
-                <img src="images/img6.jpg" alt="Маркетолог" width="270" />
-                <h3 class="our-team-h3">Николай Тарасов</h3>
-                <p class="our-team-p">Marketing</p>
-              </li>
-              <li>
-                <img src="images/img7.jpg" alt="Дизайнер интерфейса" width="270" />
-                <h3 class="our-team-h3">Михаил Ермаков</h3>
-                <p class="our-team-p">UI Designer</p>
-              </li>
-            </ul>
-          </div>
-        </section>
-      </div>
+            <li>
+              <img src="images/img5.jpg" alt="Програмист" width="270" />
+              <h3 class="our-team-h3">Ольга Репина</h3>
+              <p class="our-team-p">Frontend Drveloper</p>
+            </li>
+            <li>
+              <img src="images/img6.jpg" alt="Маркетолог" width="270" />
+              <h3 class="our-team-h3">Николай Тарасов</h3>
+              <p class="our-team-p">Marketing</p>
+            </li>
+            <li>
+              <img src="images/img7.jpg" alt="Дизайнер интерфейса" width="270" />
+              <h3 class="our-team-h3">Михаил Ермаков</h3>
+              <p class="our-team-p">UI Designer</p>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
 
-    <footer>
-      <div class="container footer-column background-footer">
-        <a href="#" class="logo logofuter-padding">Web<span class="logo-footer">Studio</span></a>
+    <footer class="background-footer footer-list">
+      <div class="container">
+        <a href="#" class="logo">Web<span class="logo-footer">Studio</span></a>
         <address class="adress">г. Киев, пр-т Леси Украинки, 26</address>
-        <ul class="adress-padding">
-          <li>
+        <ul>
+          <li class="footer-mail-margin">
             <a href="mailto:infodevstudio.com" class="footer-auth">infodevstudio.com</a>
           </li>
           <li>
