--- a/portfolio.html
+++ b/portfolio.html
@@ -16,15 +16,15 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="botton-line">
-      <div class="container">
+    <header class="header">
+      <div class="container heder-container">
         <a href="#" class="logo">Web<span class="logo-header">Studio</span></a>
 
         <nav class="site-nav">
           <ul class="nav-container">
-            <li><a href="./index.html" class="link auth-link current">Студия</a></li>
-            <li><a href="./portfolio.html" class="link auth-link">Портфолио</a></li>
-            <li><a href="#" class="link auth-link">Контакты</a></li>
+            <li><a href="./index.html" class="link nav-link">Студия</a></li>
+            <li><a href="./portfolio.html" class="link nav-link current">Портфолио</a></li>
+            <li><a href="#" class="link nav-link">Контакты</a></li>
           </ul>
         </nav>
 
@@ -40,76 +40,92 @@
     </header>
 
     <main>
-      <section>
+      <section class="section">
         <div class="container">
           <h1 class="visually-hidden">Портфолио</h1>
-          <div class="filter-list">
-            <ul class="filter-button-list">
-              <li><button type="button" class="filter-button filter">Все</button></li>
-              <li><button type="button" class="filter-button filter">Веб-сайты</button></li>
-              <li><button type="button" class="filter-button filter">Приложения</button></li>
-              <li><button type="button" class="filter-button filter">Дизайн</button></li>
-              <li><button type="button" class="filter-button filter">Маркетинг</button></li>
-            </ul>
+          <ul class="filter-button-list">
+            <li><button type="button" class="filter-button filter active-btn">Все</button></li>
+            <li><button type="button" class="filter-button filter">Веб-сайты</button></li>
+            <li><button type="button" class="filter-button filter">Приложения</button></li>
+            <li><button type="button" class="filter-button filter">Дизайн</button></li>
+            <li><button type="button" class="filter-button filter">Маркетинг</button></li>
+          </ul>
 
-            <ul class="container filter-cards">
-              <li>
-                <img src="./images/people.jpg" alt="Люди" width="370" />
+          <ul class="filter-cards">
+            <li>
+              <img src="./images/people.jpg" alt="Люди" width="370" />
+              <div class="portfolio-wrapper">
                 <h2 class="card-title">Технокряк</h2>
                 <p class="card-filter">Веб-сайт</p>
-              </li>
-              <li>
-                <img src="./images/sport.jpg" alt="Спортсмены" width="370" />
+              </div>
+            </li>
+            <li>
+              <img src="./images/sport.jpg" alt="Спортсмены" width="370" />
+              <div class="portfolio-wrapper">
                 <h2 class="card-title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
                 <p class="card-filter">Дизайн</p>
-              </li>
-              <li>
-                <img src="./images/seafood.jpg" alt="Морская еда" width="370" />
+              </div>
+            </li>
+            <li>
+              <img src="./images/seafood.jpg" alt="Морская еда" width="370" />
+              <div class="portfolio-wrapper">
                 <h2 class="card-title">Ресторан <span lang="en">Seafood</span></h2>
                 <p class="card-filter">Приложение</p>
-              </li>
-              <li>
-                <img src="./images/nausnik.jpg" alt="Наушники" width="370" />
+              </div>
+            </li>
+            <li>
+              <img src="./images/nausnik.jpg" alt="Наушники" width="370" />
+              <div class="portfolio-wrapper">
                 <h2 class="card-title">Проект <span lang="en">Prime</span></h2>
                 <p class="card-filter">Маркетинг</p>
-              </li>
-              <li>
-                <img src="./images/boxes.jpg" alt="Подарочная упаковка" width="370" />
+              </div>
+            </li>
+            <li>
+              <img src="./images/boxes.jpg" alt="Подарочная упаковка" width="370" />
+              <div class="portfolio-wrapper">
                 <h2 class="card-title">Проект <span lang="en">Boxes</span></h2>
                 <p class="card-filter">Приложение</p>
-              </li>
-              <li>
-                <img src="./images/display.jpg" alt="Монитор" width="370" />
+              </div>
+            </li>
+            <li>
+              <img src="./images/display.jpg" alt="Монитор" width="370" />
+              <div class="portfolio-wrapper">
                 <h2 class="card-title"><span lang="en">Inspiration has no Borders</span></h2>
                 <p class="card-filter">Веб-сайт</p>
-              </li>
-              <li>
-                <img src="./images/book.jpg" alt="Книга" width="370" />
+              </div>
+            </li>
+            <li>
+              <img src="./images/book.jpg" alt="Книга" width="370" />
+              <div class="portfolio-wrapper">
                 <h2 class="card-title">Издание <span lang="en"></span> Limited Edition</h2>
                 <p class="card-filter">Дизайн</p>
-              </li>
-              <li>
-                <img src="./images/sheet.jpg" alt="Этикетка" width="370" />
+              </div>
+            </li>
+            <li>
+              <img src="./images/sheet.jpg" alt="Этикетка" width="370" />
+              <div class="portfolio-wrapper">
                 <h2 class="card-title">Проект <span lang="en">LAB</span></h2>
                 <p class="card-filter">Маркетинг</p>
-              </li>
-              <li>
-                <img src="./images/notebook.jpg" alt="Ноутбук" width="370" />
+              </div>
+            </li>
+            <li>
+              <img src="./images/notebook.jpg" alt="Ноутбук" width="370" />
+              <div class="portfolio-wrapper">
                 <h2 class="card-title"><span lang="en">Growing Business</span></h2>
                 <p class="card-filter">Приложение</p>
-              </li>
-            </ul>
-          </div>
+              </div>
+            </li>
+          </ul>
         </div>
       </section>
     </main>
 
-    <footer>
-      <div class="container footer-column background-footer">
-        <a href="#" class="logo logofuter-padding">Web<span class="logo-footer">Studio</span></a>
+    <footer class="background-footer footer-list">
+      <div class="container">
+        <a href="#" class="logo">Web<span class="logo-footer">Studio</span></a>
         <address class="adress">г. Киев, пр-т Леси Украинки, 26</address>
-        <ul class="adress-padding">
-          <li>
+        <ul>
+          <li class="footer-mail-margin">
             <a href="mailto:infodevstudio.com" class="footer-auth">infodevstudio.com</a>
           </li>
           <li>
