--- a/index.html
+++ b/index.html
@@ -93,31 +93,40 @@
       </section>
 
       <!-- Команда сотрудников -->
-      <section class="section bcg">
+      <section class="section bgc">
         <div class="container">
           <h2 class="info-heading">Наша команда</h2>
           <ul class="our-team team-list">
-            <li>
+            <li class="bgc-cards">
               <img src="images/img4.jpg" alt="Дизайнер" width="270" />
-              <h3 class="our-team-h3">Игорь Демьяненко</h3>
-              <p class="our-team-p">Product Designer</p>
-              <p></p>
+              <div class="team-wrapper">
+                <h3 class="our-team-h3">Игорь Демьяненко</h3>
+                <p class="our-team-p">Product Designer</p>
+              </div>
             </li>
 
-            <li>
+            <li class="bgc-cards">
               <img src="images/img5.jpg" alt="Програмист" width="270" />
-              <h3 class="our-team-h3">Ольга Репина</h3>
-              <p class="our-team-p">Frontend Drveloper</p>
+              <div class="team-wrapper">
+                <h3 class="our-team-h3">Ольга Репина</h3>
+                <p class="our-team-p">Frontend Drveloper</p>
+              </div>
             </li>
-            <li>
+
+            <li class="bgc-cards">
               <img src="images/img6.jpg" alt="Маркетолог" width="270" />
-              <h3 class="our-team-h3">Николай Тарасов</h3>
-              <p class="our-team-p">Marketing</p>
+              <div class="team-wrapper">
+                <h3 class="our-team-h3">Николай Тарасов</h3>
+                <p class="our-team-p">Marketing</p>
+              </div>
             </li>
-            <li>
+
+            <li class="bgc-cards">
               <img src="images/img7.jpg" alt="Дизайнер интерфейса" width="270" />
-              <h3 class="our-team-h3">Михаил Ермаков</h3>
-              <p class="our-team-p">UI Designer</p>
+              <div class="team-wrapper">
+                <h3 class="our-team-h3">Михаил Ермаков</h3>
+                <p class="our-team-p">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
